# datastand

./: .gitignore  DataStand.py  LICENSE  README.md  dataStand.py  pyproject.toml  setup.py  setuptools  test.py
DataStand/: DataStand.py  __init__.py  setup.py  test.py
DataStand.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datastand/: __init__.py  datastand.py
src/datastand/: __init__.py  datastand.py
